# slimt

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  README.md  setup.py
.github/workflows/: main.yml
app/: CMakeLists.txt  main.cc  test.cc
bindings/java/: .gitignore  CMakeLists.txt  Model.java  slimt.cpp
bindings/java/com/github/jerinphilip/slimt/: Driver.java  Model.java  ModelConfig.java  Package.java  Service.java
bindings/java/include/: com_github_jerinphilip_slimt_Model.h  com_github_jerinphilip_slimt_Service.h
bindings/java/io/github/jerinphilip/slimt/: Driver.java  Model.java  ModelConfig.java  Package.java  Service.java
bindings/python/: CMakeLists.txt  README.md  __init__.py  cmds.py  iterators.py  repository.py  slimt.cpp  utils.py
bindings/python/iterators/: __init__.py  sentences.py  words.py
bindings/python/python/: bergamot.cpp
bindings/python/python/tests/: test_all.py  test_html.py
bindings/python/tests/: conftest.py  test_all.py  test_basic.py  test_cmdline.py  test_encoding.py  test_ende_borked_base.py  test_iterators.py  test_pivot.py
bindings/wasm/: CMakeLists.txt  project_version.js.in  slimt.cpp
cmake/: FindPCRE2.cmake  FindSentencePiece.cmake  GetVersionFromFile.cmake  MacroEnsureOutOfSourceBuild.cmake  slimt.pc.in  slimtConfig.cmake.in
data/: numbers2x2.txt  sample.txt
packaging/: PKGBUILD  PKGBUILD.python-slimt-git  PKGBUILD.slimt-git
scripts/: call-stack.py  compare-models.sh  download-wngt20.sh  extract-public-headers.py  inspect-bin.py  marian-file-inspect.py  marian-trace-gen.h  order-sources-shuf.py  run.py  run.sh  t12n.py  test-gen.py  trace-xlit.sh  traces.sh
scripts/ci/: android.sh  build.sh  format-check.sh  test.sh  update-alternatives-clang.sh
scripts/ci/android/: 01-setup.sh  02-build.sh  03-test.sh  04-package.sh
scripts/ci/macos/: 01-setup.sh  02-build.sh  03-test.sh
scripts/ci/python/: run.py
scripts/ci/ubuntu/: 01-setup.sh  02-build.sh  03-test.sh  04-package.sh
scripts/ci/wasm/: 02-build.sh
scripts/one-off/: forward.sh  fren.sh
slimt/: Aligned.cc  Aligned.hh  Annotation.cc  Annotation.hh  Batch.cc  Batch.hh  Batcher.cc  Batcher.hh  CMakeLists.txt  Cache.hh  Frontend.cc  Frontend.hh  HTML.cc  HTML.hh  Input.cc  Input.hh  Io.cc  Io.hh  Macros.hh  Model.cc  Model.hh  Modules.cc  Modules.hh  QMM.cc  QMM.hh  Regex.cc  Regex.hh  Request.cc  Request.hh  Response.cc  Response.hh  ResponseBuilder.cc  ResponseBuilder.hh  Scratchpad.cc  Search.cc  Search.hh  Service.cc  Service.hh  Shortlist.cc  Shortlist.hh  (+24 more)
slimt/qmm/: Gemmology.cc  Gemmology.inl.cc  Intgemm.inl.cc  Ruy.inl.cc  Ruy.inl.hh
slimt/simd/: avx2.h  neon.h  sse.h
tests/: CMakeLists.txt  TestSuite.hh  generate-units.py
